--- a/woodstock-external/prototype/pom.xml
+++ b/woodstock-external/prototype/pom.xml
@@ -39,7 +39,7 @@
                 <executions>
                     <execution>
                         <id>make-jar</id>
-                        <phase>package</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
@@ -59,7 +59,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <classesDirectory>${project.build.directory}/prototype</classesDirectory>
+                    <classesDirectory>${project.build.directory}/${project.artifactId}</classesDirectory>
                 </configuration>
             </plugin>
 
